[package]
name = "rich_strong_server"
version = "0.1.0"
edition = "2021"
description = "server side of rich strong"
license = "GPL-3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rich-strong-lib = "0.1.0"
[patch.crates-io]
rich-strong-lib = { path = '../lib' }
